--- a/style.css
+++ b/style.css
@@ -1,3 +1,51 @@
-body{
+body{ margin: 0;
+    padding: 0;
     font-family: 'Roboto', sans-serif;
+    background-image: url("images/thumb-1920-697157.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.halfwidth{
+    float: left;
+    width:35%;
+    margin-left: 10%;}
+    
+.halfwidth img{
+    width: 80%;
+}
+section{
+    height: 500px;
+    
+}
+.top2 h2{
+
+text-align: center;
+margin-bottom: 50px;
+}
+.three{
+
+float: left;
+width: 20%;
+height: 80%;
+margin-left: 10%;
+box-shadow: 10px 10px 40px gray;
+
+}
+.three img{display: block;
+    margin-left: 32px;
+    margin-bottom: 50px;
+    margin-top: 50px;
+    width: 200px;
+    height:150px;
+    border-radius: 10px;
+}
+.three h3 p{
+    margin-left: 20px;
+}
+.topx{
+    background-color: rgba(253, 245, 230, 0.363);
+}
+.top2x{
+
+    background-color: rgba(253, 245, 230, 0.363);
 }
