--- a/style.css
+++ b/style.css
@@ -1,17 +1,53 @@
 body{ margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
-    background-image: url("images/thumb-1920-697157.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
+   background-image: url("images/thumb-1920-697157.jpg");
+   background-repeat: no-repeat;
+   background-size: cover;
 }
 .halfwidth{
     float: left;
     width:35%;
-    margin-left: 10%;}
+    margin-left: 10%;
+    margin-top: 80px}
     
 .halfwidth img{
     width: 80%;
+}
+.name{
+    color: yellow;
+}
+.mythought{
+    color: whitesmoke;
+}
+.hi{
+    color:violet;
+}
+.anchor{ color: white;
+    text-decoration: none;
+    background-image: linear-gradient(crimson,pink);
+    border-radius: 10%;
+}
+.about{
+    color: blue;
+}
+.knowme{
+    color:orange;
+}
+.anchor1{ color: white;
+    text-decoration: none;
+    background-image: linear-gradient(blue,cyan);
+    border-radius: 10%;}
+
+.true{ 
+    color:red;
+}
+.talk{
+    color: crimson;
+}
+
+.sing{
+    color: cyan;
 }
 section{
     height: 500px;
@@ -48,4 +84,97 @@ box-shadow: 10px 10px 40px gray;
 .top2x{
 
     background-color: rgba(253, 245, 230, 0.363);
+}
+.top3{
+margin-left: 250px;
+    margin-top: 200px;
+    height: 500px;
+}
+.bottom{
+    height: 20%;
+    width: 35%;
+    float: left;
+    margin-top: 30px;
+    margin-left: 60px;
+   margin-bottom: 50px;
+}
+.xox{
+    margin-top: 20px;
+    background-color: orange;
+    border-radius: 5%;
+    width: 30%;
+    margin-left: 150px;
+    margin-top: 30px;
+    text-align:center ;
+    
+}
+.lol {
+    background-image: linear-gradient(blue,cyan);
+border-radius: 2%;
+height: 30%;
+width: 80%;
+
+}
+.xo{color: white;
+background-color: crimson;
+border-radius: 3%;
+height: 100%;
+width: 80%;
+padding: 10px;
+text-align: center;
+}
+
+.logo{
+    width: 2%;
+    float: left;
+}
+.logo img{
+    width: 75%;
+    margin-left: 640px;
+    padding: 0;
+}
+.short{
+
+
+    text-align: center;
+}
+#fb img{width: 60%;
+    margin-top: 2px;
+
+}
+.xtra{background-color: rgba(64, 224, 208, 0.39);
+    height: 500px;
+}
+.my-special{
+    width: 40%;
+    float: left;
+}
+#spe1{ margin-top: 200px;
+    width: 50%;
+}
+.h2{
+    color: darkorange;
+}
+.radio{
+    color: deepskyblue;
+}
+.skip{
+    color: fuchsia;
+}
+.receipe{
+    color:goldenrod;
+}
+.receipe1{
+    color: cyan;
+}
+.high{
+    color: red;
+}
+#spe2 img{
+    margin-left: 120px;
+}
+
+
+.h3x{ 
+    color: white;
 }
