--- a/style.css
+++ b/style.css
@@ -87,7 +87,8 @@ box-shadow: 10px 10px 40px gray;
 }
 .top3{
 margin-left: 250px;
-    margin-top: 200px;
+   margin-bottom: 0px;
+   margin-top: 200px;
     height: 500px;
 }
 .bottom{
@@ -178,3 +179,6 @@ text-align: center;
 .h3x{ 
     color: white;
 }
+.top4{margin-bottom: 100px;
+    margin-top: 0;
+height: 20%;}
