--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@ margin-left: 250px;
 }
 .xox{
     margin-top: 20px;
-    background-color: orange;
+    background-image: linear-gradient(180deg,cyan,grey);
     border-radius: 5%;
     width: 30%;
     margin-left: 150px;
@@ -117,7 +117,7 @@ width: 80%;
 
 }
 .xo{color: white;
-background-color: crimson;
+background-image: linear-gradient(180deg,crimson,orange);
 border-radius: 3%;
 height: 100%;
 width: 80%;
@@ -174,7 +174,10 @@ text-align: center;
 #spe2 img{
     margin-left: 120px;
 }
-
+ 
+.cho{
+    background-color: chocolate;
+}
 
 .h3x{ 
     color: white;
